--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <audio id="audio">
-        <source src="/source/music.mp3" type="audio/mpeg">
+        <source src="source/music.mp3" type="audio/mpeg">
     </audio>
     <div id="cursor"><img id="hand-img" src="img/hand.png"></div>
     <div class="version-app">v. 0.42</div>
@@ -27,6 +27,8 @@
         <h3 class="container__date">Дата запуска: 31.10.2020</h3>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.1/socket.io.js" integrity="sha512-AcZyhRP/tbAEsXCCGlziPun5iFvcSUpEz2jKkx0blkYKbxU81F+iq8FURwPn1sYFeksJ+sDDrI5XujsqSobWdQ==" crossorigin="anonymous"></script>
+    <script src="js/audio.js"></script>
+    <script src="js/cursor.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
