--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             <h2 class="container__counter__text">Раз погладили хесуса</h2>
         </div>
         <button class="container__btn"></button>
+        <div class="container__links-content">
+            <div class="links-content__hesus">
+              <a href="https://www.twitch.tv/jesusavgn" target="_blank"><img src="img/twitch_hesus.svg"></a>
+              <p>Твич Хесуса</p>
+            </div>
+            <div class="links-content__donate" style="width: 90px;">
+              <a href="https://www.donationalerts.com/r/taptaphesus" target="_blank"><img src="img/donation.svg"></a>
+              <p>Поддержать проект</p>
+            </div>
+        </div>
         <h3 class="container__date">Дата запуска: 31.10.2020</h3>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.1/socket.io.js" integrity="sha512-AcZyhRP/tbAEsXCCGlziPun5iFvcSUpEz2jKkx0blkYKbxU81F+iq8FURwPn1sYFeksJ+sDDrI5XujsqSobWdQ==" crossorigin="anonymous"></script>
