--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
               <a href="https://www.twitch.tv/jesusavgn" target="_blank"><img src="img/twitch_hesus.svg"></a>
               <p>Твич Хесуса</p>
             </div>
+            <div class="links-content__dev">
+                <a href="https://vk.com/privalenkovkirill" target="_blank"><img src="img/vk_dev.svg"></a>
+                <p>Разработчик</p>
+            </div>
             <div class="links-content__donate" style="width: 90px;">
               <a href="https://www.donationalerts.com/r/taptaphesus" target="_blank"><img src="img/donation.svg"></a>
               <p>Поддержать проект</p>
