--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p>Разработчик</p>
             </div>
             <div class="links-content__donate" style="width: 90px;">
-              <a href="https://www.donationalerts.com/r/taptaphesus" target="_blank"><img src="img/donation.svg"></a>
+              <a href="https://www.tinkoff.ru/rm/privalenkov.kirill1/eF6iq97561" target="_blank"><img src="img/donation.svg"></a>
               <p>Поддержать проект</p>
             </div>
         </div>
