--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <h2 class="container__counter__text">Раз погладили хесуса</h2>
         </div>
-        <button class="container__btn"></button>
+        <div class="container__btn"></div>
         <div class="container__links-content">
             <div class="links-content__hesus">
               <a href="https://www.twitch.tv/jesusavgn" target="_blank"><img src="img/twitch_hesus.svg"></a>
