--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>TapTapHesus</title>
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon16.png">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -22,7 +21,9 @@
             </div>
             <h2 class="container__counter__text">Раз погладили хесуса</h2>
         </div>
-        <div class="container__btn"></div>
+        <div class="treat-wrapper">
+            <div class="container__btn"></div>
+        </div>
         <div class="container__links-content">
             <div class="links-content__hesus">
               <a href="https://www.twitch.tv/jesusavgn" target="_blank"><img src="img/twitch_hesus.svg"></a>
@@ -43,5 +44,6 @@
     <script src="js/audio.js"></script>
     <script src="js/cursor.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/particles.js"></script>
 </body>
 </html>
