--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="container__counter__content">
                 <div class="container__counter__number">У вас 0</div>
                 <img class="hand-white" src="img/hand_white.svg"> 
-                <img src="img/hand_black.svg"> 
+                <img class="hand-dark" src="img/hand_black.svg"> 
             </div>
             <h2 class="container__counter__text">Раз погладили хесуса</h2>
         </div>
