--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
     <script src="js/audio.js"></script>
     <script src="js/cursor.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/particles.js"></script>
 </body>
 </html>
