--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="container__counter">
             <div class="container__counter__content">
                 <div class="container__counter__number">У вас 0</div>
+                <div class="container__point-up"></div>
                 <img class="hand-white" src="img/hand_white.svg"> 
                 <img class="hand-dark" src="img/hand_black.svg"> 
             </div>
