--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="links-content__donate" style="width: 90px;">
               <a href="https://www.tinkoff.ru/rm/privalenkov.kirill1/eF6iq97561" target="_blank"><img src="img/donation.svg"></a>
-              <p>Поддержать проект</p>
+              <p>Доныт</p>
             </div>
         </div>
         <h3 class="container__date">Дата запуска: 31.10.2020</h3>
