Отображать количество пользователей онлайн

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </audio>
     <div id="cursor"><img id="hand-img" src="img/hand.png"></div>
     <div class="container">
+        <div class="container__users-online">Онлайн: 1</div>
         <div class="container__counter">
             <div class="container__counter__content">
                 <div class="container__counter__number">У вас 0</div>
